syntax = "proto3";
package certusone.wormholechain.wormhole;

option go_package = "github.com/certusone/wormhole-chain/x/wormhole/types";

message ActiveGuardianSetIndex {
  uint32 index = 1;
  
}
